5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4073/executions/1643_2447.log
== SUBMITION (2019-04-15 15:22:46) 
-- CODE:
preco = float(input())
pagamento = float(input())

x = preco - pagamento
z= pagamento - preco

falta = round(x,2)
troco = round(z,2)

if( preco > pagamento):
	print('Falta',falta)
	
elif (preco <= pagamento):
print('Troco de',troco)
-- EXECUTION TIME:
0.160504
-- ERROR:
  File "/home/codebench/codes/1643/2447/main.py", line 14
    print('Troco de',troco)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:23:00) 
-- CODE:
preco = float(input())
pagamento = float(input())

f = preco - pagamento
t = pagamento - preco

falta = round(f,2)
troco = round(t,2)

if( preco > pagamento):
	print('Falta',falta)
	
elif (preco <= pagamento):
print('Troco de',troco)
-- EXECUTION TIME:
0.255413
-- ERROR:
  File "/home/codebench/codes/1643/2447/main.py", line 14
    print('Troco de',troco)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:23:05) 
-- CODE:
preco = float(input())
pagamento = float(input())

f = preco - pagamento
t = pagamento - preco

falta = round(f,2)
troco = round(t,2)

if( preco > pagamento):
	print('Falta',falta)
	
elif (preco <= pagamento):
print('Troco de',troco)
-- EXECUTION TIME:
0.157956
-- ERROR:
  File "/home/codebench/codes/1643/2447/main.py", line 14
    print('Troco de',troco)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:23:07) 
-- CODE:
preco = float(input())
pagamento = float(input())

f = preco - pagamento
t = pagamento - preco

falta = round(f,2)
troco = round(t,2)

if( preco > pagamento):
	print('Falta',falta)
	
elif (preco <= pagamento):
print('Troco de',troco)
-- EXECUTION TIME:
0.200533
-- ERROR:
  File "/home/codebench/codes/1643/2447/main.py", line 14
    print('Troco de',troco)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:23:16) 
-- CODE:
preco = float(input())
pagamento = float(input())

f = preco - pagamento
t = pagamento - preco

falta = round(f,2)
troco = round(t,2)

if( preco > pagamento):
	print('Falta',falta)
	
elif (preco <= pagamento):
print('Troco de',troco)
-- ERROR:
File "XXXX", line 14
    print('Troco de',troco)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:23:17) 
-- CODE:
preco = float(input())
pagamento = float(input())

f = preco - pagamento
t = pagamento - preco

falta = round(f,2)
troco = round(t,2)

if( preco > pagamento):
	print('Falta',falta)
	
elif (preco <= pagamento):
print('Troco de',troco)
-- EXECUTION TIME:
0.23807
-- ERROR:
  File "/home/codebench/codes/1643/2447/main.py", line 14
    print('Troco de',troco)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:23:23) 
-- CODE:
preco = float(input())
pagamento = float(input())

f = preco - pagamento
t = pagamento - preco

falta = round(f,2)
troco = round(t,2)

if( preco > pagamento):
	print('Falta',falta)
	
elif (preco <= pagamento):
print('Troco de',troco)
-- ERROR:
File "XXXX", line 14
    print('Troco de',troco)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:23:29) 
-- CODE:
preco = float(input())
pagamento = float(input())

f = preco - pagamento
t = pagamento - preco

falta = round(f,2)
troco = round(t,2)

if( preco > pagamento):
	print('Falta',falta)
	
elif (preco <= pagamento):
print('Troco de',troco)
-- EXECUTION TIME:
0.155602
-- ERROR:
  File "/home/codebench/codes/1643/2447/main.py", line 14
    print('Troco de',troco)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:23:30) 
-- CODE:
preco = float(input())
pagamento = float(input())

f = preco - pagamento
t = pagamento - preco

falta = round(f,2)
troco = round(t,2)

if( preco > pagamento):
	print('Falta',falta)
	
elif (preco <= pagamento):
print('Troco de',troco)
-- EXECUTION TIME:
0.212
-- ERROR:
  File "/home/codebench/codes/1643/2447/main.py", line 14
    print('Troco de',troco)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:24:55) 
-- CODE:
preco = float(input())
pagamento = float(input())

f = preco - pagamento
t = pagamento - preco

falta = round(f,2)
troco = round(t,2)

if( preco > pagamento):
print('Falta',falta)
	
elif (preco <= pagamento):
print('Troco de',troco)
-- EXECUTION TIME:
0.244953
-- ERROR:
  File "/home/codebench/codes/1643/2447/main.py", line 11
    print('Falta',falta)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:25:05) 
-- CODE:
preco = float(input())
pagamento = float(input())

f = preco - pagamento
t = pagamento - preco

falta = round(f,2)
troco = round(t,2)

if( preco > pagamento):
	print('Falta',falta)
	
elif (preco <= pagamento):
print('Troco de',troco)
-- ERROR:
File "XXXX", line 14
    print('Troco de',troco)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:25:06) 
-- CODE:
preco = float(input())
pagamento = float(input())

f = preco - pagamento
t = pagamento - preco

falta = round(f,2)
troco = round(t,2)

if( preco > pagamento):
	print('Falta',falta)
	
elif (preco <= pagamento):
print('Troco de',troco)
-- EXECUTION TIME:
0.214438
-- ERROR:
  File "/home/codebench/codes/1643/2447/main.py", line 14
    print('Troco de',troco)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:25:09) 
-- CODE:
preco = float(input())
pagamento = float(input())

f = preco - pagamento
t = pagamento - preco

falta = round(f,2)
troco = round(t,2)

if( preco > pagamento):
	print('Falta',falta)
	
elif (preco <= pagamento):
print('Troco de',troco)
-- ERROR:
File "XXXX", line 14
    print('Troco de',troco)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:25:27) 
-- CODE:
preco = float(input())
pagamento = float(input())

f = preco - pagamento
t = pagamento - preco

falta = round(f,2)
troco = round(t,2)

if( preco > pagamento):
print('Falta',falta)
	
elif (preco <= pagamento):
print('Troco de',troco)
-- ERROR:
File "XXXX", line 11
    print('Falta',falta)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:25:35) 
-- CODE:
preco = float(input())
pagamento = float(input())

f = preco - pagamento
t = pagamento - preco

falta = round(f,2)
troco = round(t,2)

if( preco > pagamento):
print('Falta',falta)
	
elif (preco <= pagamento):
print('Troco de',troco)
-- EXECUTION TIME:
0.1369
-- ERROR:
  File "/home/codebench/codes/1643/2447/main.py", line 11
    print('Falta',falta)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:25:55) 
-- CODE:
preco = float(input())
pagamento = float(input())

f = preco - pagamento
t = pagamento - preco

falta = round(f,2)
troco = round(t,2)

if( preco > pagamento):
	print('Falta',falta)
	
elif (preco <= pagamento):
	print('Troco de',troco)
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:26:03) 
-- CODE:
preco = float(input())
pagamento = float(input())

f = preco - pagamento
t = pagamento - preco

falta = round(f,2)
troco = round(t,2)

if( preco > pagamento):
	print('Falta',falta)
	
elif (preco <= pagamento):
	print('Troco de',troco)
-- EXECUTION TIME:
0.238753
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
